[gd_scene load_steps=3 format=3 uid="uid://cnp05mhkr5kr"]

[ext_resource type="Script" uid="uid://cmxrkn8rph7j" path="res://entities/traps/death_plane.gd" id="1_p0kwl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_137eb"]
size = Vector2(80, 80)

[node name="DeathPlane" type="Node2D"]
script = ExtResource("1_p0kwl")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 1, 1, 1)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_137eb")

[connection signal="body_entered" from="Area2D" to="." method="_on_player_entered"]
